--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ input {
     margin: 5px;
 }
 
+#search {
+    width: 350px;
+    margin-top: 10px;
+}
+
 button {
     padding: 10px 20px;
     margin-left: 5px;
